--- a/css/index.css
+++ b/css/index.css
@@ -106,3 +106,14 @@ p {
     font-size: 16px;
     color: #777;
 }
+
+@media only screen and (max-width: 767px){
+    .input-group{
+        width: 100%;
+
+    }
+    .submit-button{
+        width: 12%;
+        margin-left: 80%;
+    }
+}
