--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,8 @@ p {
 }
 
 .input-group {
-    width: 640px;
+    max-width: 640px;
+    width: 86%;
     background-color: white;
     padding: 20px ;
     padding-bottom: 30px ;
@@ -80,7 +81,7 @@ p {
     text-align: center;
     margin-left: 630px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
+    
 }
 .submit-button:hover {
     background-color: #f9f7fc;
@@ -112,11 +113,9 @@ p {
         width: 100%;
     }
     .submit-button{
-        width: 12%;
-        margin-left: 80%;
-    }
-    body{
-        overflow: scroll;
+            /* width: 12%;
+            margin-left: 80%; */
+        align-items: center;    
     }
 }
 
