--- a/css/index2.css
+++ b/css/index2.css
@@ -1,7 +1,6 @@
 body{
     background-color: #fefae9;
-
-    margin: 5% 3% 1% 3%;
+    /* margin: 5% 3% 1% 3%; */
 }
 
 #content-l{
@@ -9,9 +8,9 @@ body{
     height: 800px;
     background-color: #ee9ca7;
     /* margin: 0px 10px 0px 0px; */
-
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 #content-r{
     color: white;
     background-color: #673ab7;
@@ -384,3 +383,12 @@ body {
     font-size: 1.4em;
   }
 }
+
+@media only screen and (max-width: 767px){
+    .velas{
+        top:300px
+    }
+    .cream{
+        position: fixed;
+    }
+}   
