--- a/css/index2.css
+++ b/css/index2.css
@@ -1,6 +1,7 @@
 body{
     background-color: #fefae9;
     /* margin: 5% 3% 1% 3%; */
+    /* overflow: hidden; */
 }
 
 #content-l{
@@ -50,10 +51,13 @@ body{
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
   background: linear-gradient(#762c2c,#ff0303);
 }
+
 .box-body .img{
+  width: 100px;
+  position: static;
   opacity: 0;
   transform: translateY(0%);
-  transition: all 0.5s;
+  transition: all 0.4s;
   margin: 0 auto;
   display: block;
 }
@@ -385,6 +389,9 @@ body {
 }
 
 @media only screen and (max-width: 767px){
+    h2{
+      margin: 0;
+    }
     .velas{
         top:300px
     }
