--- a/css/index2.css
+++ b/css/index2.css
@@ -387,13 +387,20 @@ body {
     font-size: 1.4em;
   }
 }
-
+.footer{
+  width: 100%;
+  padding: 10px 0 20px 0;
+  text-align: center;
+  align-items: center;
+  background-color:#dddddd ;
+  
+}
 @media only screen and (max-width: 767px){
     h2{
       margin: 0;
     }
     .velas{
-        top:280px
+        top:276px
     }
     .cream{
         position: fixed;
