--- a/css/index2.css
+++ b/css/index2.css
@@ -399,9 +399,9 @@ body {
     h2{
       margin: 0;
     }
-    .velas{
+    /* .velas{
         top:276px
-    }
+    } */
 
     .footer{
       width: 100%;
